[package]
name = "serde-tcp"
version = "0.1.0"
authors = ["Anxo Rodriguez <anxolin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
